--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>Wordclock Demo</title>
-    <link rel="stylesheet" type="text/css" href="wordclock.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="http://code.jquery.com/jquery-1.7.min.js"></script>
-    <script src="wordclock.js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
     <div id="wordclock" class="wordclock">
